--- a/Contato/contato.css
+++ b/Contato/contato.css
@@ -55,13 +55,21 @@ legend {
 .inputuser:valid~.labelinput {
    top: -20px;
    font-size: 12px;
-   color: darkcyan;
+   color: antiquewhite;
 }
 
 #datacontato {
    border: none;
    padding: 9px;
    border-radius: 10px;
+   outline: none;
+   font-size: 14px;
+}
+
+#melhorhoracontato {
+   border: none;
+   padding: 9px;
+   border-radius: 9px;
    outline: none;
    font-size: 14px;
 }
@@ -101,8 +109,8 @@ footer a {
    }
 }
 
-   @media(max-width:768px) {
-      .box {
-         width: 300px;
-      }
+@media(max-width:768px) {
+   .box {
+      width: 300px;
    }
+}
